[package]
name = "jbt"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = "1.7.0"
tokio = { version = "1.47.1", features = ["full"] }
reqwest = {version="0.12.23",features=["json"]}
serde = "1.0.219"
vvcore = "0.0.2"
rodio = { version = "0.21.0", default-features = false, features = ["symphonia-all","playback"] }
memmap2 = "0.9.8"
serde_json = "1.0.143"
